--- a/charts/redis/templates/sentinel/ports-configmap.yaml
+++ b/charts/redis/templates/sentinel/ports-configmap.yaml
@@ -70,7 +70,7 @@ remove the template comments and leave the yaml comments to help debug
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "common.names.fullname" . }}-ports-configmap
+  name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-{{ template "common.names.fullname" . }}-ports-{{.Values.stage}}
   namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
   {{- if .Values.commonAnnotations }}
