--- a/charts/redis/templates/tls-secret.yaml
+++ b/charts/redis/templates/tls-secret.yaml
@@ -4,14 +4,14 @@ SPDX-License-Identifier: APACHE-2.0
 */}}
 
 {{- if (include "redis.createTlsSecret" .) }}
-{{- $secretName := printf "%s-crt" (include "common.names.fullname" .) }}
+{{- $secretName := printf "%s-secret-%s-%s-%s-certs-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "common.names.fullname" .) .Values.stage }}
 {{- $ca := genCA "redis-ca" 365 }}
 {{- $releaseNamespace := (include "common.names.namespace" .) }}
 {{- $clusterDomain := .Values.clusterDomain }}
 {{- $fullname := include "common.names.fullname" . }}
-{{- $serviceName := include "common.names.fullname" . }}
-{{- $headlessServiceName := printf "%s-headless" (include "common.names.fullname" .) }}
-{{- $masterServiceName := printf "%s-master" (include "common.names.fullname" .) }}
+{{- $serviceName := printf "%s-svc-%s-%s-%s-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "common.names.fullname" .) .Values.stage }}
+{{- $headlessServiceName := printf "%s-svc-%s-%s-%s-headless-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "common.names.fullname" .) .Values.stage }}
+{{- $masterServiceName := printf "%s-svc-%s-%s-%s-master-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "common.names.fullname" .) .Values.stage }}
 {{- $altNames := list (printf "*.%s.%s.svc.%s" $serviceName $releaseNamespace $clusterDomain) (printf "%s.%s.svc.%s" $masterServiceName $releaseNamespace $clusterDomain) (printf "*.%s.%s.svc.%s" $masterServiceName $releaseNamespace $clusterDomain) (printf "*.%s.%s.svc.%s" $headlessServiceName $releaseNamespace $clusterDomain) (printf "%s.%s.svc.%s" $headlessServiceName $releaseNamespace $clusterDomain) "127.0.0.1" "localhost" $fullname }}
 {{- $cert := genSignedCert $fullname nil $altNames 365 $ca }}
 apiVersion: v1
