Fix external-secrets' webhook-secret.yaml file

--- a/charts/external-secrets/templates/webhook-secret.yaml
+++ b/charts/external-secrets/templates/webhook-secret.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.webhook.create (not .Values.webhook.certManager.enabled) }}
-{{- $secret := lookup "v1" "Secret" .Release.Namespace (printf "%s-secret-%s-%s-%s-wh-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "external-secrets.fullname" .) .Values.stage) }}
+{{- $secret := lookup "v1" "Secret" (include "external-secrets.namespace" .) (printf "%s-secret-%s-%s-%s-wh-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "external-secrets.fullname" .) .Values.stage) }}
 apiVersion: v1
 kind: Secret
 metadata:
