Fix external-secrets' webhook secret creation, disable nr logging for external-dns

--- a/charts/external-dns/values.yaml
+++ b/charts/external-dns/values.yaml
@@ -70,7 +70,8 @@ revisionHistoryLimit:
 podLabels: {}
 
 # -- Annotations to add to the `Pod`.
-podAnnotations: {}
+podAnnotations:
+  fluentbit.io/exclude: "true"
 
 # -- (bool) Set this to `false` to [opt out of API credential automounting](https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/#opt-out-of-api-credential-automounting) for the `Pod`.
 automountServiceAccountToken:
