--- a/charts/external-secrets/values.yaml
+++ b/charts/external-secrets/values.yaml
@@ -45,7 +45,7 @@ crds:
   createPushSecret: true
   annotations: {}
   conversion:
-    enabled: false
+    enabled: true
 
 imagePullSecrets: []
 nameOverride: "external-secrets"
