--- a/charts/redis/templates/sentinel/service.yaml
+++ b/charts/redis/templates/sentinel/service.yaml
@@ -27,10 +27,7 @@ metadata:
   annotations: {{- include "common.tplvalues.render" ( dict "value" $annotations "context" $) | nindent 4 }}
   {{- end }}
 spec:
-  type: {{ .Values.sentinel.service.type }}
-  {{- if or (eq .Values.sentinel.service.type "LoadBalancer") (eq .Values.sentinel.service.type "NodePort") }}
-  externalTrafficPolicy: {{ .Values.sentinel.service.externalTrafficPolicy | quote }}
-  {{- end }}
+  type: ClusterIP
   {{- if and (eq .Values.sentinel.service.type "LoadBalancer") (not (empty .Values.sentinel.service.loadBalancerIP)) }}
   loadBalancerIP: {{ .Values.sentinel.service.loadBalancerIP }}
   {{- end }}
@@ -51,49 +48,11 @@ spec:
   {{- end }}
   ports:
     - name: tcp-redis
-      {{- if and (or (eq .Values.sentinel.service.type "NodePort") (eq .Values.sentinel.service.type "LoadBalancer")) .Values.sentinel.service.nodePorts.redis }}
-      port: {{ .Values.sentinel.service.nodePorts.redis }}
-      {{- else if eq .Values.sentinel.service.type "NodePort" }}
-      port: {{ $redisport }}
-      {{- else}}
       port: {{ .Values.sentinel.service.ports.redis }}
-      {{- end }}
       targetPort: {{ .Values.replica.containerPorts.redis }}
-      {{- if and (or (eq .Values.sentinel.service.type "NodePort") (eq .Values.sentinel.service.type "LoadBalancer")) .Values.sentinel.service.nodePorts.redis }}
-      nodePort: {{ .Values.sentinel.service.nodePorts.redis }}
-      {{- else if eq .Values.sentinel.service.type "ClusterIP" }}
-      nodePort: null
-      {{- else if eq .Values.sentinel.service.type "NodePort" }}
-      nodePort:  {{ $redisport }}
-      {{- end }}
     - name: tcp-sentinel
-      {{- if and (or (eq .Values.sentinel.service.type "NodePort") (eq .Values.sentinel.service.type "LoadBalancer")) .Values.sentinel.service.nodePorts.sentinel }}
-      port: {{ .Values.sentinel.service.nodePorts.sentinel }}
-      {{- else if eq .Values.sentinel.service.type "NodePort" }}
-      port:  {{ $sentinelport }}
-      {{- else }}
       port: {{ .Values.sentinel.service.ports.sentinel }}
-      {{- end }}
       targetPort: {{ .Values.sentinel.containerPorts.sentinel }}
-      {{- if and (or (eq .Values.sentinel.service.type "NodePort") (eq .Values.sentinel.service.type "LoadBalancer")) .Values.sentinel.service.nodePorts.sentinel }}
-      nodePort: {{ .Values.sentinel.service.nodePorts.sentinel }}
-      {{- else if eq .Values.sentinel.service.type "ClusterIP" }}
-      nodePort: null
-      {{- else if eq .Values.sentinel.service.type "NodePort" }}
-      nodePort:  {{ $sentinelport }}
-      {{- end }}
-    {{- if eq .Values.sentinel.service.type "NodePort" }}
-    - name: sentinel-internal
-      nodePort: null
-      port: {{ .Values.sentinel.containerPorts.sentinel }}
-      protocol: TCP
-      targetPort: {{ .Values.sentinel.containerPorts.sentinel }}
-    - name: redis-internal
-      nodePort: null
-      port: {{ .Values.replica.containerPorts.redis }}
-      protocol: TCP
-      targetPort: {{ .Values.replica.containerPorts.redis }}
-    {{- end }}
     {{- if .Values.sentinel.service.extraPorts }}
     {{- include "common.tplvalues.render" (dict "value" .Values.sentinel.service.extraPorts "context" $) | nindent 4 }}
     {{- end }}
