--- a/charts/kaap/values.yaml
+++ b/charts/kaap/values.yaml
@@ -34,7 +34,7 @@ fullnameOverride: "kaap"
 
 operator:
   enabled: true
-  image: datastax/kaap:0.3.0
+  image: dcoppa/kaap:0.3.0
   imagePullPolicy: IfNotPresent
   replicas: 1
   livenessProbe:
