--- a/charts/karpenter/values.yaml
+++ b/charts/karpenter/values.yaml
@@ -52,7 +52,7 @@ podDisruptionBudget:
   maxUnavailable: 1
 # -- SecurityContext for the pod.
 podSecurityContext:
-  fsGroup: 65532
+  fsGroup: 65536
 # -- PriorityClass name for the pod.
 priorityClassName: system-cluster-critical
 # -- Override the default termination grace period for the pod.
@@ -107,9 +107,9 @@ controller:
     # -- Repository path to the controller image.
     repository: public.ecr.aws/karpenter/controller
     # -- Tag of the controller image.
-    tag: 0.35.4
+    tag: 0.35.5
     # -- SHA256 digest of the controller image.
-    digest: sha256:27a73db80b78e523370bcca77418f6d2136eea10a99fc87d02d2df059fcf5fb7
+    digest: sha256:95274336c067af49f940677e4ea8b8db5c1dc3cbd20b9e843b75ca70ad8c2533
   # -- Additional environment variables for the controller pod.
   env: []
   # - name: AWS_REGION
@@ -210,6 +210,6 @@ settings:
     # Setting drift to false disables the drift disruption method to watch for drift between currently deployed nodes
     # and the desired state of nodes set in nodepools and nodeclasses
     drift: true
-    # -- spotToSpotConsolidation is ALPHA and is disabled by default.
+    # -- spotToSpotConsolidation is disabled by default.
     # Setting this to true will enable spot replacement consolidation for both single and multi-node consolidation.
     spotToSpotConsolidation: false
