Exclude kaap deployment from newrelic logging

--- a/charts/kaap/templates/operator.yaml
+++ b/charts/kaap/templates/operator.yaml
@@ -20,6 +20,7 @@ spec:
   template:
     metadata:
       annotations:
+        fluentbit.io/exclude: "true"
         prometheus.io/scrape: "true"
         prometheus.io/path: /q/metrics
         prometheus.io/port: "8080"
