Add "secure" flag

--- a/charts/samlproxy/templates/ingressroute.yaml
+++ b/charts/samlproxy/templates/ingressroute.yaml
@@ -25,4 +25,5 @@ spec:
       sticky:
         cookie:
           httpOnly: true
+          secure: true
           name: {{ include "samlproxy.fullname" . }}
