Use "HostRegexp" to match IPv4 addresses

--- a/charts/samlproxy/templates/configmap-html.yaml
+++ b/charts/samlproxy/templates/configmap-html.yaml
@@ -8,142 +8,6 @@ metadata:
   name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-{{ include "samlproxy.fullname" . }}-html-{{.Values.stage}}
   namespace: {{ .Release.Namespace }}
 data:
-  50x.html: |
-    <!DOCTYPE html>
-    <html>
-    <head>
-    <title>Error</title>
-    <style>
-    html { color-scheme: light dark; }
-    body { width: 35em; margin: 0 auto;
-    font-family: Tahoma, Verdana, Arial, sans-serif; }
-    </style>
-    </head>
-    <body>
-    <h1>An error occurred.</h1>
-    <p>Sorry, the page you are looking for is currently unavailable.<br/>
-    Please try again later.</p>
-    <p>If you are the system administrator of this resource then you should check
-    the error log for details.</p>
-    </body>
-    </html>
-  403.css: |
-    @import url("https://fonts.googleapis.com/css?family=Lato");
-    * {
-      position: relative;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Lato", sans-serif;
-    }
-
-    body {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: #f8f9fa;
-    }
-
-    h1 {
-      margin: 40px 0 20px;
-    }
-
-    .lock {
-      border-radius: 5px;
-      width: 55px;
-      height: 45px;
-      background-color: #6a8791;
-      animation: dip 1s;
-      animation-delay: 1.5s;
-    }
-    .lock::before, .lock::after {
-      content: "";
-      position: absolute;
-      border-left: 5px solid #6a8791;
-      height: 20px;
-      width: 15px;
-      left: calc(50% - 12.5px);
-    }
-    .lock::before {
-      top: -30px;
-      border: 5px solid #6a8791;
-      border-bottom-color: transparent;
-      border-radius: 15px 15px 0 0;
-      height: 30px;
-      animation: lock 2s, spin 2s;
-    }
-    .lock::after {
-      top: -10px;
-      border-right: 5px solid transparent;
-      animation: spin 2s;
-    }
-
-    @keyframes lock {
-      0% {
-        top: -45px;
-      }
-      65% {
-        top: -45px;
-      }
-      100% {
-        top: -30px;
-      }
-    }
-    @keyframes spin {
-      0% {
-        transform: scaleX(-1);
-        left: calc(50% - 30px);
-      }
-      65% {
-        transform: scaleX(1);
-        left: calc(50% - 12.5px);
-      }
-    }
-    @keyframes dip {
-      0% {
-        transform: translateY(0px);
-      }
-      50% {
-        transform: translateY(10px);
-      }
-      100% {
-        transform: translateY(0px);
-      }
-    }
-  403.html: |
-    <!DOCTYPE html>
-    <html lang="en" >
-    <head>
-      <meta charset="UTF-8">
-      <title>FORBIDDEN</title>
-      <link rel="stylesheet" href="/403.css">
-    </head>
-    <body>
-    <div class="lock"></div>
-    <div class="message">
-      <h1>Access to this page is restricted</h1>
-      <p>Please check with the site admin if you believe this is a mistake.</p>
-    </div>
-    </body>
-    </html>
-  404.html: |
-    <!DOCTYPE html>
-    <html lang="en" >
-    <head>
-      <meta charset="UTF-8">
-      <title>FORBIDDEN</title>
-      <link rel="stylesheet" href="/403.css">
-    </head>
-    <body>
-    <div class="lock"></div>
-    <div class="message">
-      <h1>Access to this page is restricted</h1>
-      <p>Please check with the site admin if you believe this is a mistake.</p>
-    </div>
-    </body>
-    </html>
   healthcheck.html: |
     <!DOCTYPE html>
     <html>
@@ -152,358 +16,7 @@ data:
     </html>
   index.html: |
     <!DOCTYPE html>
-    <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-            <title>Porsche HYDRA Data Platform</title>
-            <link rel="shortcut icon" href="/favicon.ico">
-            <meta name="mobile-web-app-capable" content="yes">
-            <meta name="theme-color" content="#fff">
-            <link rel="stylesheet" type="text/css" href="/style.css">
-            <script type="application/javascript">
-                    function dynamicChangesOnLoad() {
-                            // Change the background photo depending on the month
-                            curr_mon = new Date().getMonth()
-                            if (curr_mon > 3 && curr_mon < 10) {
-                                    document.getElementById("chooser").className = "summer"
-                            }
-                            else {
-                                    document.getElementById("chooser").className = "winter"
-                            }
-                    }
-            </script>
-    </head>
-    <body id="chooser" onload="dynamicChangesOnLoad()">
-            <div class="logo"><a href="https://www.porsche.com/" target="_blank"><img src="porsche-svg.svg" title="" alt="" style="height:70px;"></a></div>
-            <div class="login">
-                    <div id="general">
-                            <b id="hydra-app-name">Porsche HYDRA</b>
-                            <span class="description">
-                                    <p><strong>Welcome to HYDRA Data Platform!</strong></p>
-                            </span>
-                    </div>
-            </div>
-    </body>
+    <html>
+    <head><title>INDEX</title></head>
+    <body>OK</body>
     </html>
-  style.css: |
-    @media screen and (max-height: 600px){
-      #chooser {
-    	position: absolute !important;
-      }
-      
-      .main, .login {
-    	width: 890px;
-    	height: 850px;	
-    	position: relative !important;
-    	top: 15%;
-    	/*transform: translateY(20%) !important;*/
-    	}
-    	
-    	footer {
-    		position: fixed !important;
-    	}
-    }
-    
-    #chooser {
-    	font-family: "Source Sans Pro", Helvetica, sans-serif;
-    }
-    
-    #chooser.summer {
-    	background: url("background_summer.jpg") no-repeat left 80% fixed; 
-    	-webkit-background-size: cover;
-    	-moz-background-size: cover;
-    	-o-background-size: cover;
-    }
-    
-    #chooser.winter {
-    	background: url("background_winter.jpg") no-repeat left 80% fixed; 
-    	-webkit-background-size: cover;
-    	-moz-background-size: cover;
-    	-o-background-size: cover;
-    }
-    
-    #chooser.error {
-    	background: url("background_summer.jpg") no-repeat left 80% fixed; 
-    	-webkit-background-size: cover;
-    	-moz-background-size: cover;
-    	-o-background-size: cover;
-    }
-    
-    .logo
-    	{
-    	position: absolute;
-    	right: 5%;
-    	top: 5%;
-    	}
-    
-    .main, .login {
-    	width: 890px;
-    	height: 850px;	
-    	position: absolute;
-    	top: 15%;
-    	/*transform: translateY(-50%);*/
-    }
-    .menu
-    	{
-    	position: relative;
-    	color: #3c3b3b;
-    	margin: 20px;		
-    	display: flex;		
-    	}
-    #applications {
-    	width: 600px;
-    	margin-right: 20px;
-    	background-color: rgba(255, 255, 255, 1);
-    	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
-    	padding: 20px;
-    }
-    
-    .menuheadline
-    	{
-    	font-weight: 700;
-    	color: rgb(21, 23, 24);
-    	font-size: 25px;
-    	margin-top: 20px;
-    	margin-bottom: 10px;
-    	display: inline;
-    	}
-    .description-text .menuheadline {
-    	margin-bottom: 3px;
-    }
-    .icon {
-    	width: 100px;
-    }
-    #general {
-    	position: relative;
-    	padding: 20px;
-    	display: grid;
-    	margin: 20px;	
-    	color: #3c3b3b;
-    	background-color: rgba(255, 255, 255, 0.8);
-    	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
-    	font-size: 15px;
-    }
-    #general b {
-    	margin-bottom: 10px;
-    	font-size: 30px;
-    	display: block;
-    }
-    .description a {
-    	color: rgb(213, 0, 28);
-    }
-    .login1 , .login2, .support-box  {
-    	position: relative;
-    	color: #3c3b3b;
-    	margin: 20px;
-    	display:flex;		
-    	background-color: rgba(255, 255, 255, 0.8);	
-    	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
-            }
-    .description-text *{
-    	display: inline-block;
-    }
-    .description-text b{
-    	display: inline;
-    }
-    .description-text {
-    	color: rgb(21, 23, 24);
-    	margin-right: 50px;
-    	text-align: justify;
-    	font-size: 15px;
-    }
-    .description {
-    	display: inline;
-    }
-    .description-area {
-    	width: 490px;
-    	height: 200px;
-    	margin-right: -1px;
-    	padding-left: 20px !important;
-    	background-color: #fff;
-    	z-index: 50;
-    }
-    .button-area, .description-area {
-    	display: flex;	
-    	color: #3c3b3b;
-    }
-    .button-area {
-    	display: block;
-    	position: absolute;
-    	right: 20px;
-    	width: 180px;
-    	top: 50%;
-    	transform: translateY(-50%);
-    }
-    .arrow-area {
-    	display: inline-block;
-    width: 200px;
-    overflow: hidden;
-    transform: rotate(270deg);
-    -transform: rotate(270deg);
-    }
-    .arrow-area:after {
-     content: "";
-    position: absolute;
-    width: 141.42px;
-    height: 141.42px;
-    background: #fff;
-    transform: rotate(45deg);
-    top: -69.71px;
-    left: 29.29px;
-    box-shadow: -1px -1px 10px -2px rgba(0, 0, 0, 0.5);
-    }
-    #login-button-vw {
-    	right: 22px;
-    }
-    #login-button-ppn {
-    	right: 9px;
-    }
-    .p-icon-doc {	
-    	font: 400 16px Arial;
-    	width: 160px;
-    	line-height: 1.75;
-    	border: 1px solid #3c3b3b;
-    	background-color: rgba(255, 255, 255, 0);
-    	color: #3c3b3b;
-    	padding: 16px;
-    	margin: 16px;
-    	margin-right: 30px;
-    	margin-top: 8px;
-    }
-    .p-icon-doc:hover, .p-icon-support:hover {
-    	background-color: rgb(21, 23, 24);
-    	border: 1px solid rgb(21, 23, 24);
-    	color: #fff;
-    	cursor: pointer
-    }
-    .p-icon-doc:focus, .p-icon-support:focus {
-    	background-color: rgb(21, 23, 24);
-    	border: 1px solid rgb(21, 23, 24);
-    	outline: none !important;
-    	color:#fff;
-    }
-    .p-icon-login
-    	{
-    	font: 400 16px Arial;
-    	width: 160px;
-    	line-height: 1.75;
-    	border: 1px solid rgb(213, 0, 28);
-    	background-color:rgb(213, 0, 28);
-    	color: #fff;
-    	padding: 16px;
-    	margin: 6px;
-    	margin-right: 30px;	
-    	margin-bottom: 8px;
-    	}
-    
-    .p-icon-support
-    	{
-    	font: 400 16px Arial;
-    	width: 160px;
-    	line-height: 1.75;
-    	border: 1px solid #3c3b3b;
-    	background-color: #ccc;
-    	color: #3c3b3b;
-    	padding: 5px 16px;
-    	margin: 6px;
-    	margin-right: 30px;	
-    	margin-bottom: 8px;
-    	}
-    
-    .p-icon-login:hover {
-    	background-color: rgb(152, 0, 20);
-    	border: 1px solid rgb(152, 0, 20);
-    	cursor: pointer;
-    }
-    .p-icon-login:focus {
-    	background-color: rgb(152, 0, 20);
-    	border: 1px solid rgb(152, 0, 20);
-    	outline: none !important;
-    }
-    .nav-arrow {
-    	height:16px;
-    	width: 16px;
-    	position: absolute;
-    	top: 2.5px;
-    }
-    #chooser ul
-    	{
-    	list-style: none;
-    	padding-left: 10px;
-    	padding-top: 0px;
-    	margin-bottom: 0px;
-    	}
-    
-    ul li
-    	{
-    	position: relative;
-    	margin-left: 0px;
-    	padding-left: 0px;
-    	padding-bottom: 5px;
-    	}
-    
-    ul li a
-    	{
-    	color: #3c3b3b;
-    	transition: color 0.2s ease;
-    	font-weight: 400;
-    	text-decoration: none;
-    	font-size: 15px;
-    	line-height: 1.75;
-    	-moz-transition: color 0.2s ease;
-    	-webkit-transition: color 0.2s ease;
-    	-moz-osx-font-smoothing: grayscale;
-    	-webkit-font-smoothing: antialiased;
-    	}
-    ul li a span {
-    	margin-left: 25px;
-    }
-    ul li a:hover .nav-arrow 
-    	{
-    	fill:rgb(213, 0, 28);
-    	}
-    ul li a:hover, footer a:hover {
-    	color: rgb(213, 0, 28) !important;
-    }
-    
-    #support {
-    	color: rgb(213, 0, 28);
-    }
-    
-    footer {
-    	position: absolute;
-    	text-align: right;
-    	bottom: 0px;
-    	padding: 10px;
-    	padding-right: 20px;
-    	margin-left: 20px;
-    	margin-right: 20px;
-    	background-color: rgba(255, 255, 255, 0.45);
-    	width: calc(100% - 86px);
-    }
-    
-    footer a {
-    	color: #3c3b3b;
-    	margin-left: 20px;
-    	margin-right: 20px;
-    	text-decoration: none;
-    	font-weight: 500;
-    }
-    
-    .imprint {
-    	text-align: justify;
-    	text-justify: default;
-    }
-    
-    #privacy, #legal
-    	{
-    	font-family: "Source Sans Pro", Helvetica, sans-serif;
-    	padding: 20px;
-    	padding-top: 130px;
-    	}
-    	
-    #privacy a, #legal a {
-    	color: rgb(213, 0, 28);
-    }
-    
-    ul.imprint {
-    	list-style-type: square;
-    }
