Fix samlproxy template

--- a/charts/argo-cd/templates/ingressroute.yaml
+++ b/charts/argo-cd/templates/ingressroute.yaml
@@ -19,7 +19,7 @@ spec:
       namespace: {{.Values.k8sPrefix}}-ns-{{.Values.customer}}-{{.Values.purpose}}-traefik-admin-{{.Values.stage}}
     - name: {{.Values.k8sPrefix}}-middleware-{{.Values.customer}}-{{.Values.purpose}}-proxyheaders-{{.Values.stage}}
       namespace: {{.Values.k8sPrefix}}-ns-{{.Values.customer}}-{{.Values.purpose}}-traefik-admin-{{.Values.stage}}
-    - name: {{.Values.k8sPrefix}}-middleware-{{.Values.customer}}-{{.Values.purpose}}-{{ template "argo-cd.fullname" . }}-checkheaders-{{.Values.stage}}
+    - name: {{.Values.k8sPrefix}}-middleware-{{.Values.customer}}-{{.Values.purpose}}-checkheaders-{{.Values.stage}}
       namespace: {{.Values.k8sPrefix}}-ns-{{.Values.customer}}-{{.Values.purpose}}-traefik-admin-{{.Values.stage}}
     services:
     - kind: Service
