--- a/charts/samlproxy/templates/configmap-template.yaml
+++ b/charts/samlproxy/templates/configmap-template.yaml
@@ -86,7 +86,7 @@ data:
         <If "%{ENV:REQUESTED_LOCATION} != '' && %{ENV:REQUESTED_LOCATION} != 'nifi' && %{ENV:REQUESTED_LOCATION} != 'nifi-api' && %{ENV:REQUESTED_LOCATION} != 'nifi-docs'">
           RewriteCond %{ENV:MELLON_username} ^$|^null$|^undefined$|^0$|^.*#ext#$|^.*#EXT#$
           RewriteRule .* - [E=MELLON_username:%{ENV:MELLON_email}]
-          RequestHeader set X-Auth-Token "%{REQUESTED_LOCATION}e_%{MELLON_username}e"
+          RequestHeader set X-Auth-Token "%{MELLON_username}e"
         </If>
 
         ProxyPass $BACKEND
