--- a/charts/kaap/templates/crds/pulsarclusters.kaap.oss.datastax.com-v1.yml
+++ b/charts/kaap/templates/crds/pulsarclusters.kaap.oss.datastax.com-v1.yml
@@ -2,6 +2,8 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-options: ServerSideApply=true
   name: pulsarclusters.kaap.oss.datastax.com
 spec:
   group: kaap.oss.datastax.com
